<resources>
    <string name="button">Button</string>
    <string name="my_day">My Day</string>
    <string name="kpis">KPIs</string>
    <string name="meetings">Meetings</string>
    <string name="meeting">Meeting</string>
    <string name="forgot_password_ul"><u>Forgot Password ?</u></string>
    <string name="optlogin"><u>OtpLogin</u></string>
    <string name="forgot_password_">Forgot Password ?</string>
    <string name="_09_00_to_09_30">09:00 to 09:30</string>
    <string name="meeting_with_tripathi">Meeting with Tripathi</string>
    <string name="todo">TODO</string>
    <string name="create_group">Create Group</string>
    <string name="create_members">Create Members</string>
    <string name="view">"View"</string>
    <string name="view_group">View Groups</string>
    <string name="list_groups">List Of Groups</string>
    <string name="view_members">View Members</string>
    <string name="list_members">List Of Members</string>
    <string name="group_name">Group Name</string>
    <string name="name">Name</string>
    <string name="name_">Name:</string>
    <string name="educational_qualifications">Educational Qualifications</string>
    <string name="certifications">Certifications</string>
    <string name="awards_recoginations"><![CDATA[Awards & Recognitions(Optional)]]></string>
    <string name="email_or_mobile">Email or Mobile Number</string>
    <string name="email">Email</string>
    <string name="email_add">Email Address</string>
    <string name="emails">Emails</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="cofirm_email_add">Confirm Email Address</string>
    <string name="designation">Designation :</string>
    <string name="desg">Designation</string>
    <string name="default_currency">Default Currency</string>
    <string name="default_rate">Default Rate</string>
    <string name="description">Description</string>
    <string name="meeting_agenda">Meeting Agenda</string>
    <string name="select_team_member">Select Team member(s)</string>
    <string name="assign_group">Assign Group(s)</string>
    <string name="assign_groups_">Assign Group(s)</string>
    <string name="add_team_member">Add Team Member</string>
    <string name="add_practice_head">Add Group Head</string>
    <string name="select_all">Select All</string>
    <string name="client_name">"Client Name"</string>
    <string name="select_document">"Select Document(s)"</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="browse">"BROWSE"</string>
    <string name="browse_small">"Browse"</string>
    <string name="grps_members">Groups &amp; Members</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="save_next"><![CDATA[Save & Next]]></string>
    <string name="update">Update</string>
    <string name="con_fees">Consultation fee</string>
    <string name="assign">Assign</string>
    <string name="add_group">Add Group</string>
    <string name="category">Category</string>
    <string name="team_members">Team Members</string>
    <string name="members">Members</string>
    <string name="team_member">Team Members</string>
    <string name="team_members__">Team Member : </string>
    <string name="team_members_">Team Member(s)</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add_relationships">Add Relationships</string>
    <string name="view_relationships">View Relationships</string>
    <string name="search">Search</string>
    <string name="deleted_relationship">Deleted Relationship</string>
    <string name="search_team_members">Search Team Members</string>
    <string name="select_groups">Select Group(s)</string>
    <string name="select_client_name">"Select Client Name"</string>
    <string name="first_name">First Name</string>
    <string name="country">Country</string>
    <string name="year_exp">Years of Experience</string>
    <string name="practice_area">Practice Areas</string>
    <string name="service_offered">Services Offered</string>
    <string name="language">Languages Spoken</string>
    <string name="entity_name">Entity Name</string>
    <string name="contact_person">Contact Person</string>
    <string name="last_name">Last Name</string>
    <string name="contact_phone_number">Contact Phone Number</string>
    <string name="contact_phone_number_">Contact Phone Number</string>
    <string name="send_request">Send Request</string>
    <string name="profile">Profile</string>
    <string name="share_document">Share Document</string>
    <string name="unshare">Unshare</string>
    <string name="tag_type">Tag Type</string>
    <string name="tag">Tag</string>
    <string name="time_sheet_entry">Time Sheet Entry</string>
    <string name="edit_meta_data">Edit Meta Data</string>
    <string name="edit_metadata">Edit Metadata</string>
    <string name="document_name">Document Name</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="photo_library">Photo Library</string>
    <string name="document">Document</string>
    <string name="add_tag">Add Tag</string>
    <string name="update_tag">Update Tag</string>
    <string name="upload">Upload</string>
    <string name="select_document_type">Select Document Type</string>
    <string name="update_grp">Update Group(S)</string>
    <string name="created">Created On : </string>
    <string name="expiration">Expiration:</string>
    <string name="documents">Documents</string>
    <string name="title">Title</string>
    <string name="case_number">Case Number</string>
    <string name="matter_num">Matter Num</string>
    <string name="matter_number">Matter Number</string>
    <string name="matter_type">Matter Type</string>
    <string name="select_matter_type">Select Matter Type</string>
    <string name="matter_title">Matter Title</string>
    <string name="case_type">Case Type</string>
    <string name="date_of_filing">Date of Filing</string>
    <string name="court">Court</string>
    <string name="judge_s">Judge(s)</string>
    <string name="judge">Judge</string>
    <string name="case_priority">Case Priority</string>
    <string name="legal_matter">Legal Matter</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="pending">Pending</string>
    <string name="opponent_advocate">Opponent Advocate</string>
    <string name="opponent_advocates">Opponent Advocate(s)</string>
    <string name="add">Add</string>
    <string name="assign_groups">Assign Group(s)</string>
    <string name="add_clients">Add Client(s)</string>
    <string name="assigned_team_members">Assigned Team Member(s)</string>
    <string name="assign_team_members">Assign Team Member(s)</string>
    <string name="general_matter">General Matter</string>
    <string name="document_library">Document Library</string>
    <string name="device_drive">Device/Drive</string>
    <string name="add_documents">Add Document(s)</string>
    <string name="phone_number">Phone Number</string>
    <string name="assign_team_member">Assign Team Member</string>
    <string name="project">Project</string>
    <string name="projects">Projects</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="task">Task</string>
    <string name="date">Date</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="total_hours">Total Hours</string>
    <string name="_45">45</string>
    <string name="_30">30</string>
    <string name="_15">15</string>
    <string name="time">Time</string>
    <string name="event_start_time">Event Start Time</string>
    <string name="event_end_time">Event End Time</string>
    <string name="time_zone">Time Zone</string>
    <string name="meeting_link">Meeting Link</string>
    <string name="dailing_link">Dailing Link</string>
    <string name="location">Location</string>
    <string name="matter_name">Matter Name</string>
    <string name="add_team_members">Add Team Member(s)</string>
    <string name="add_entity">Add Entity</string>
    <string name="client_team_members">Client Team Member(s)</string>
    <string name="create_member">Create Member</string>
    <string name="selected_client_team_members">Selected Client Team Member(s)</string>
    <string name="msg">Message</string>
    <string name="client">Client</string>
    <string name="teams">Teams</string>
    <string name="chat_cnt_lost">Chat Connection lost, Please try again later</string>
    <string name="chat_loading">Chat Loading..,</string>
    <string name="note_text">Note: Contact Admin for Team Member password reset </string>
    <string name="select_clients">Select Client(s)</string>
    <string name="selected_tm">Selected Team Member(s)</string>
    <string name="selected_groups">Selected Group(s)</string>
    <string name="selected_clients">Selected Client(s)</string>
    <string name="multi_firm_text">This email address is associated with multiple firms. Please select a firm to sign-in</string>
    <string name="group_head">Group Head :</string>
    <string name="matter_information">Matter Information</string>
    <string name="add_notification">Add Notification</string>
    <string name="add_individuals">Add Individuals</string>
    <string name="selected_entities">Selected Entities</string>
    <string name="selected_individuals">Selected Individuals</string>
    <string name="selected_documents">Selected Document(s)</string>
    <string name="selected_document">Selected Document</string>
    <string name="add_to_timesheet">Add to Timesheet</string>
    <string name="dial_in_number">Dial-in Number</string>
    <string name="repetition">Repetition</string>
    <string name="event_type">Event Type</string>
    <string name="select_event_type">Select Event Type</string>
    <string name="select_documents">"Select Document(s)"</string>
    <string name="duration">"Duration: "</string>
    <string name="all_day">All Day</string>
    <string name="message">Message</string>
    <string name="none">None</string>
    <string name="create">Create</string>
    <string name="next">Next</string>
    <string name="priority">Priority</string>
    <string name="close_date">Close Date</string>
    <string name="start_date">Start Date</string>
    <string name="case_title">"Case Title"</string>
    <string name="first">First</string>
    <string name="inbox_0">Inbox 0</string>
    <string name="more_details"><u>More Details</u></string>
    <string name="document_s">Document(S)</string>
    <string name="group_s_clients_amp_team_member_s"><![CDATA[Client (s) & Team Member(S)]]></string>
    <string name="matter_timeline">Matter Timeline</string>
    <string name="update_groups">Update Groups</string>
    <string name="update_group">Update Group</string>
    <string name="groups">Groups</string>
    <string name="yes">Yes</string>
    <string name="alert">Alert !</string>
    <string name="no">No</string>
    <string name="matter">Matter</string>
    <string name="firm_profile">Firm Profile</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="audit">Audit</string>
    <string name="relationships">Relationships</string>
    <string name="timesheets">Timesheets</string>
    <string name="invoice">Invoice</string>
    <string name="status_">Status :</string>
    <string name="created_by_">Created By :</string>
    <string name="due_date_">Due Date :</string>
    <string name="create_date_">Create Date :</string>
    <string name="invoice_number_">Invoice Number :</string>
</resources>